--- a/index.html
+++ b/index.html
@@ -39,23 +39,29 @@
     <li>Konaha High School</li><br>
 
   </ul>
-  <h3>STUDY</h3>
+  <h3>Missions</h3>
   <table border='1'>
     <thead>
       <tr>
-        <th>YEAR</th>
-        <th>WORK</th>
+      <!--  <th>YEAR</th>
+        <th>WORK</th>-->
+        <th>age</th>
+        <th>Mission</th>
       </tr>
     </thead>
     <tbody>
 
       <tr>
-        <td>2017-2019</td>
-        <td>Sri chaitanya Junior college</td>
+      <!--  <td>2017-2019</td>
+        <td>Sri chaitanya Junior college</td>-->
+        <td>19</td>
+        <td>Sasuke Rescue Mission</td>
       </tr>
       <tr>
-        <td>2019</td>
-        <td>VNIT-1st year</td>
+      <!--  <td>2019</td>
+        <td>VNIT-1st </td>-->
+        <td>21</td>
+          <td>Fourth shinobi World War:climax </td>
       </tr>
   </table>
   </tbody>
@@ -90,12 +96,12 @@
     <td>
       <table>
         <tr>
-          <td>c</td>
-          <td>⭐⭐⭐⭐</td>
+          <td>Ninjutsu</td>
+          <td>⭐⭐⭐⭐⭐</td>
         </tr>
         <tr>
-          <td>python</td>
-          <td>⭐⭐⭐⭐⭐</td>
+          <td>taijutsu</td>
+          <td>⭐⭐⭐⭐</td>
         </tr>
       </table>
       </td>
@@ -106,12 +112,12 @@
         <td>
           <table>
             <tr>
-              <td>c++</td>
-              <td>⭐⭐⭐⭐</td>
+              <td>Genjutsu</td>
+              <td>⭐⭐⭐⭐⭐</td>
             </tr>
             <tr>
-              <td>webdevelopment</td>
-              <td>⭐</td>
+              <td>Bukijutsu</td>
+              <td>⭐⭐⭐⭐</td>
             </tr>
       </table>
 
